--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://kit.fontawesome.com/a80232805f.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
   <title>COVID-19 | Mundo & Brasil</title>
 </head>
 
@@ -17,7 +17,7 @@
   </div>
   <div=class="conteudo-left">
     <h2 class="titulo-tabela selecionar">MUNDO</h2>
-    <h2 class="titulo-tabela"> ----------- </h2>
+  
     <table border="0" class="tabela">
       <tr class="selecionar">
         <td>CASOS</td>
@@ -40,34 +40,35 @@
         <td id="world_recovered_rate" class="direita"></td>
       </tr>
     </table>
-    </div>
-    <div=class="conteudo-right">
-      <h2 class="titulo-tabela selecionar">BRASIL</h2>
-      <h2 class="titulo-tabela"> ----------- </h2>
-      <table border="0">
-        <tr class="selecionar">
-          <td>CASOS</td>
-          <td id="brazil_cases" class="direita"></td>
-        </tr>
-        <tr class="selecionar">
-          <td>MORTES</td>
-          <td id="brazil_deads" class="direita cor-vermelho"></td>
-        </tr>
-        <tr class="selecionar">
-          <td>RECUPERADOS</td>
-          <td id="brazil_recovered" class="direita cor-verde"></td>
-        </tr>
-        <tr class="selecionar">
-          <td>TAXA DE LETALIDADE <i class="fas fa-skull-crossbones"></i> </td>
-          <td id="brazil_dead_rate" class="direita"></td>
-        </tr>
-        <tr class="selecionar">
-          <td>TAXA DE RECUPERADOS </td>
-          <td id="brazil_recovered_rate" class="direita"></td>
-        </tr>
-      </table>
-      </div>
-      <footer class="footer">
+  </div>
+     <h3 class="titulo-tabela"> ----------- </h3>
+ </div>
+       <div=class="conteudo-left">
+         <h2 class="titulo-tabela selecionar">MUNDO</h2>
+         <table border="0" class="tabela">
+           <tr class="selecionar">
+             <td>CASOS</td>
+             <td id="brazil_cases" class="direita"></td>
+           </tr>
+           <tr class="selecionar">
+             <td>MORTES </td>
+             <td id="brazil_deads" class="direita cor-vermelho"></td>
+           </tr>
+           <tr class="selecionar">
+             <td>RECUPERADOS</td>
+             <td id="brazil_recovered" class="direita cor-verde"></td>
+           </tr>
+           <tr class="selecionar">
+             <td>TAXA DE LETALIDADE <i class="fas fa-skull-crossbones"></i> </td>
+             <td id="brazil_dead_rate" class="direita"></td>
+           </tr>
+           <tr class="selecionar">
+             <td>TAXA RECUPERADOS</td>
+             <td id="brazil_recovered_rate" class="direita"></td>
+           </tr>
+         </table>
+         </div>
+   <footer class="footer">
         <div class="selecionar"> 
         <script language=javascript type="text/javascript">
         
@@ -91,7 +92,7 @@
       <a href="https://covid19search.herokuapp.com/" class="btn btn-default">API</a>
       <i class="fab fa-python"></i>
       </footer>
-    <script src="js/script.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
