--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://kit.fontawesome.com/a80232805f.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
   <title>COVID-19 | Mundo & Brasil</title>
 </head>
 
@@ -92,7 +92,7 @@
       <a href="https://covid19search.herokuapp.com/" class="btn btn-default">API</a>
       <i class="fab fa-python"></i>
       </footer>
-  <script src="main.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
