--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -76,7 +76,7 @@
           
           monName = new Array("janeiro", "fevereiro", "março", "abril", "Maio", "junho", "agosto", "outubro", "novembro", "dezembro");
           
-          document.write("Última Atualização: " + now.getDate() + " de " + monName[now.getMonth()] + " de " + now.getFullYear() + " as " + now.getHours() + ":" + now.getMinutes())
+          document.write("Última Atualização: " + now.getDate() + " de " + monName[now.getMonth()] + " de " + now.getFullYear() + " as " + now.getHours() + ":" + (now.getMinutes()<10?'0':'') + now.getMinutes())
         </script>
         </div>
         FVitor7: 
