--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -44,7 +44,7 @@
      <h3 class="titulo-tabela"> ----------- </h3>
  </div>
        <div=class="conteudo-left">
-         <h2 class="titulo-tabela selecionar">MUNDO</h2>
+         <h2 class="titulo-tabela selecionar">BRASIL</h2>
          <table border="0" class="tabela">
            <tr class="selecionar">
              <td>CASOS</td>
