--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -38,7 +38,7 @@
         <td id="world_dead_rate" class="direita"></td>
       </tr>
       <tr class="selecionar">
-        <td>TAXA RECUPERADOS</td>
+        <td>TAXA DE RECUPERADOS</td>
         <td id="world_recovered_rate" class="direita"></td>
       </tr>
     </table>
@@ -64,7 +64,7 @@
              <td id="brazil_dead_rate" class="direita"></td>
            </tr>
            <tr class="selecionar">
-             <td>TAXA RECUPERADOS</td>
+             <td>TAXA DE RECUPERADOS</td>
              <td id="brazil_recovered_rate" class="direita"></td>
            </tr>
          </table>
