--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -99,7 +99,10 @@
             <td>CASOS GRAVES</td>
             <td id="brazil_critical" class="direita cor-vermelho"></td>
           </tr>
-         
+          <tr class="updt">
+            <td>...</td>
+            <td id="lup" class="updt2"></td>
+          </tr>   
      </div>
 <footer class="footer">
   FVitor7:
